2009-02-15  Petr Mikulik  <mikulik@physics.muni.cz>

	SF Patch #2570385: GPVAL_TERM_WINDOWID
	This patch adds automatic variable GPVAL_NAME_WINDOWID, which
	contains ID of the current window running under X11 (e.g. x11 and wxt
	terminals).

	* src/eval.c (update_gpval_variables): Update GPVAL_TERM_WINDOWID.

	* src/gadgets.h src/gadgets.c: New global variable current_x11_windowid
	to be filled by terminals running on X11 (x11, wxt, qt, ...).

	* src/mouse.c (do_event): Set global current_x11_windowid from ge->winid
	and call update_gpval_variables() to update GPVAL_TERM_WINDOWID.

	* src/gplt_x11.c (gp_execute_GE_plotdone): New routine to replace direct
	call of gp_exec_event(GE_plotdone, ..., {0|X11 Window ID}) to notify
	gnuplot of changed X11 Window ID.

2009-02-14  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/plotstyles.gnu:  Add a figure showing the use
	of image mode to create a heat map. Add a "heatmap" entry to the index.

2009-02-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.mgw: Use $(CC) instead of gcc to compile pgnuplot.

2009-02-07  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_options): Call term->init() rather than X11_init(),
	since the options routine is shared by x11 and xlib drivers.

2009-02-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (type_udv) src/eval.c (add_udv_by_name) src/fit.c
	src/plot2d.c: Prevent strange behaviour due to uninitialized field
	udv_type in a udv entry that has been created but not yet defined.
	Bug #2556225

	* src/graph3d.c (draw_3d_graphbox): Allow Z axis label in 3D plots
	to be rotated.

2009-02-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/pm3d.c (pm3d_plot) src/set.c (set_pm3d):
	Let "pm3d interpolate m,n" for negative m,n interpolates the surface
	for at least |m|, |n| points. The case m=n=0 means an optimal number
	of interpolation points.
	SF Patch #2558565: pm3d interpolate 0,0
